group 'com.weasel.secret.common'
version '1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'maven'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    compile(
            'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final'
    )
    testCompile group: 'junit', name: 'junit', version: '4.11'
}

uploadArchives {
    repositories {
        mavenDeployer {
            repository(url: "file://E:\\repository") //定义本地maven仓库的地址
        }
    }
}